Login Page creation, routing fix, text alignment fix

--- a/src/pages/BenefitsPage.css
+++ b/src/pages/BenefitsPage.css
@@ -53,8 +53,4 @@
     height: 3rem;
 }
 
-.wic {
-    
-}
-
 
